# TestMe

./: .env  .env.example  .gitignore  MOBILE-SETUP.md  README.md  admin.html  competition.html  docker-compose.yml  index.html  login.html  profile.html  pyproject.toml  quiz.html  register.html  settings.html  setup-mobile.sh
.github/workflows/: ci.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260325_0001_initial_schema.py  3c07ff0a91e4_add_avatar_url_to_users.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  question.py  score.py  user.py
backend/app/routers/: admin.py  auth.py  leaderboard.py  questions.py  scores.py  stats.py  users.py
backend/app/schemas/: admin.py  auth.py  question.py  score.py  user.py  (+1 more)
backend/quizarena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed_questions.py
backend/tests/: conftest.py  test_admin.py  test_auth_and_profile.py  test_content_and_stats.py
css/: account.css  media.css  quiz.css  style.css
frontend/: .env.example  .env.mobile  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
frontend/android/: capacitor.config.json  gradle.properties
frontend/legacy-react/: README.md  vite.config.js
frontend/scripts/: build-mobile-static.mjs
frontend/src/: App.jsx  styles.css
js/: admin.js  api.js  app.js  auth-pages.js  auth.js  competition.js  lang.js  mobile.js  profile.js  quiz.js  settings.js
(+29 files in other folders)
